# Performance-Frequency-Scaling

./: LICENSE  README.md
cross_compile/: cpufreq_modelbased.ko
docs/: CPU_freq_info.docx
scripts/: record.sh  tempCodeRunnerFile.py  training_model.py  tree_model.txt
scripts/perf_gov_env/: pyvenv.cfg
src/governor/: README.md
src/governor/src/: ..module-common.o.cmd  .Module.symvers.cmd  .cpufreq_log_feature.ko.cmd  .cpufreq_log_feature.mod.cmd  .cpufreq_log_feature.mod.o.cmd  .cpufreq_log_feature.o.cmd  .cpufreq_log_feature.o.d  .cpufreq_modelbased.ko.cmd  .cpufreq_modelbased.mod.cmd  .cpufreq_modelbased.mod.o.cmd  .cpufreq_modelbased.o.cmd  .modules.order.cmd  .test.ko.cmd  .test.mod.cmd  .test.mod.o.cmd  .test.o.cmd  Makefile  Module.symvers  cpufreq_log_feature.c  cpufreq_log_feature.h  cpufreq_log_feature.ko  cpufreq_log_feature.mod.c  cpufreq_modelbased.c  cpufreq_modelbased.ko  cpufreq_modelbased.mod  cpufreq_modelbased.mod.c  model_inference.c  model_inference.h  modules.order  test.c  test.ko  test.mod  test.mod.c
src/logger/include/: cpu_info_logger.c  cpu_info_logger.h
src/logger/src/: collect_data.c  (+1 more)
src/module_logger/: CMakeLists.txt
src/module_logger/include/: .cpu_info_logger.h.swp  cpu_info_logger.c  cpu_info_logger.h
src/module_logger/logged_data/: data.csv
src/module_logger/src/: collect_data.c  logger.c
test/: ..module-common.o.cmd  .Module.symvers.cmd  .hello_world.ko.cmd  .hello_world.mod.cmd  .hello_world.mod.o.cmd  .hello_world.o.cmd  .modules.order.cmd  Makefile  hello_world.c  hello_world.ko  hello_world.mod  hello_world.mod.c
(+16 files in other folders)
